# yuleDKCS

./: .consolidate-state.json  AGENTS.md  MEMORY.md  PROJECT_OVERVIEW.md  README.md  _call_search.js  _call_search2.js  _run_search.ps1  _search_args.json  _search_params.json  _tmp_search1.ps1  _tmp_search2.ps1  create_quote_system.py  daily-ai-briefing_2026-04-19.md  deploy-mqtt.sh  do_search.js  docker-compose.mqtt.yml  drawio-skill-quickstart_2026-04-19_1906.md  feishu-setup-guide.md  icce_protocol_task_summary_20260505_233500.md  larkcli-quickstart_2026-04-19_0954.md  linear_algebra_framework.py  linear_algebra_knowledge_framework.md  probability_framework.py  probability_framework_v2.py  probability_knowledge_framework.md  search.json  setup-feishu-secret.cmd  start-feishu-bridge.cmd  task-summary_2026-04-19_08-39.md  task-summary_2026-04-19_23-00.md  task-summary_2026-04-22T09-25-35.md  task-summary_2026-04-24_0059.md  task-summary_2026-04-29_22-03.md  task-summary_2026-05-05_2252.md  task-summary_2026-05-05_2329.md  task-summary_2026-05-06_0900.md  tech-news-2026-04-19.md  tech-news-summary_2026-04-20_0800.md  test_search.json  (+2 more)
.clawhub/: lock.json
.openclaw/: workspace-state.json
agents/: AGENTS_CONFIG.md  MESSAGE_FLOW.md  PROJECT_EXECUTION.md  WORKFLOW.md  feishu-bindings.toml  orchestrator.py  start-agents.ps1
architecture/: SYSTEM_ARCHITECTURE.md
backend/: .air.toml  .gitignore  API_PROTOCOL_REVIEW.md  Dockerfile  Dockerfile.mqtt  Dockerfile.mqtt-bridge  Makefile  README.md  config.example.yaml  deploy-mqtt.sh  docker-compose.mqtt.yml  docker-compose.yml  go.mod  go.sum  main.go
ccc_protocol/: CMakeLists.txt  README.md
ccc_protocol/src/ble/: ble_kw47a.c
ccc_protocol/src/logger/: dk_logger.h
database/: schema_report.html  schema_v1.0.0.sql
deploy/: docker-compose.dev.yml
docs/: API_REFERENCE.md  COMMUNICATION_PROTOCOL_FIXES.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  DIGITAL_KEY_FEATURES.md  Doxyfile  ISSUES_FIXED_REPORT.md  MOBILE_SDK_USAGE_GUIDE.md  P1_ISSUES_FIXED_REPORT.md  README.md  SECURITY_GUIDE.md  SE_INTEGRATION.md  SYSTEM_ARCHITECTURE.md  agent-engineering-workflow-training.md  architecture.md  embedded_sdk_protocol_review.md  end_to_end_protocol_validation.md  protocol_comparison.md
embedded/: CMakeLists.txt
embedded/ccc_protocol/include/: ccc_digital_key.h
embedded/ccc_protocol/src/nfc/: nfc_st25r501.c
embedded/cmake/: DKCSConfig.cmake.in
embedded/docs/architecture/: SPEC.md  task-summary_2026-05-05_2330.md
embedded/docs/ccc/: SPEC.md
embedded/docs/icce/: technical_specification.md
embedded/docs/test_suite/: TEST_CASES_CCC.md  TEST_CASES_STRESS.md  TEST_PLAN.md  TEST_REPORT_TEMPLATE.md
embedded/examples/: example.c  example_ccc_pairing.c  example_ccc_unlock.c  example_iccoa_control.c  example_unified_api.c
embedded/icce_protocol/: CMakeLists.txt  README.md
embedded/icce_protocol/docs/: module_design.md
embedded/icce_protocol/src/: icce_vehicle.c
embedded/icce_protocol/src/security/: security_auth.c
embedded/iccoa_protocol/: CMakeLists.txt  README.md
embedded/iccoa_protocol/docs/: SPEC.md
embedded/iccoa_protocol/src/ble/: iccoa_ble.c
embedded/iccoa_protocol/src/iccoa/: iccoa_dk_core.c
embedded/iccoa_protocol/src/iccoa/dk40/: iccoa_dk40.c
embedded/iccoa_protocol/src/service/: iccoa_service.c
embedded/include/: ccc.h  ccc_uwb.h  dk_unified.h  dkcs.h  iccoa.h  interface.h  nvm_key_storage.h
embedded/include/icce/: icce_digital_key.h
embedded/include/iccoa/: iccoa_digital_key.h
embedded/sdk/src/protocol/: README.md  ccc_certificate.h  ccc_crypto.c  ccc_crypto.h
embedded/sdk/src/se050/: se050_adapter.c  se050_crypto.c  se050_crypto.h
embedded/sdk/src/utils/: crypto_utils.c
embedded/sdk/src/uwb/: dw3000_driver.c  dw3000_driver.h
embedded/src/ccc/ble/: ble_kw47a.c
embedded/src/ccc/core/: ccc_dk_core.c
embedded/src/ccc/error/: dk_error.h
embedded/src/ccc/keymgmt/: key_mgmt.c
embedded/src/ccc/nfc/: nfc_st25r501.c
embedded/src/ccc/protocol/: ccc_core.c
embedded/src/ccc/security/: security.c
embedded/src/ccc/uwb/: uwb_ncj29d6.c
embedded/src/common/: key_migration.c  ota_update.c
embedded/src/crypto/: ecc_hal.c
embedded/src/hal/: nvm_eeprom.c  uwb_driver.c
embedded/src/icce/core/: icce_dk_core.c  icce_edge.c  icce_security.c  icce_uwb.c  icce_zone.c
embedded/src/icce/decision/: offline_decision.c
embedded/src/icce/protocol/: icce_core.c
embedded/src/icce/vehicle/: vehicle_integration.c
embedded/src/iccoa/auth/: iccoa_auth.c
embedded/src/iccoa/ble/: iccoa_ble.c
embedded/src/iccoa/core/: iccoa_dk_core.c
embedded/src/iccoa/dk30/: iccoa_dk30.c
embedded/src/iccoa/protocol/: iccoa_core.c
embedded/src/iccoa/service/: iccoa_service.c
embedded/src/security/se050/: se050_crypto.c  se050_keymgr.c  se050_keymgr.h
embedded/src/storage/: nvm_key_storage.c
embedded/src/unified/: dk_unified.c
embedded/test_suite/: BUG_TRACKING.md  TEST_CASES_INTEGRATION.md
embedded/tests/: test_aes_gcm_impl.c  test_ccc_core.c  test_ecc_hal.c  test_icce_core.c  test_nvm.c  test_scp03.c  test_se050_crypto.c  test_uwb.c
embedded/unified_protocol/: CMakeLists.txt  README.md
embedded/unified_protocol/examples/: CMakeLists.txt
examples/: CMakeLists.txt  example_icce_pairing.c
frontend/: .env.example  .gitignore  Makefile  index.html  package.json  vite.config.ts  vitest.config.ts
iccoa_protocol/: README.md
include/: ccc.h  ecc_hal.h  icce.h  scp03.h  se050_adapter.h  uwb_hal.h
memory/: 2026-04-07.md  2026-04-13.md  2026-04-19.md  (+1 more)
mobile/android/src/main/jni/: CMakeLists.txt  native-lib.cpp
openspec/: config.yaml
tests/: CMakeLists.txt  test_ccc_crypto.c  test_dkcs.c  test_iccoa_core.c
tests/fuzzing/: CMakeLists.txt  Makefile  README.md  fuzz_ccc.c  fuzz_dkcs.c  fuzz_scp03.c
tests/integration/: api_alignment_report.md  api_test.py  api_test.sh  test_ccc_full_flow.c  test_protocol_interop.c
tests/unity/: test_buffer_pool.c  test_cdr.c  test_domain.c  test_publisher.c  test_qos.c  test_reader.c  test_subscriber.c  test_topic.c  test_writer.c  unity.c  unity.h
(+550 files in other folders)
